--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "e523c291-dc60-45cf-8486-f2af864b023a"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
